# map4_point_type

./: CMakeLists.txt  package.xml
cmake/: cmake_uninstall.cmake.in
include/map4_point_type/: map4_point_type.h  map4_point_type_double.h  type_detector.hpp
src/: map4_point_type.cpp  map4_point_type_double.cpp  test.cpp  type_detector.cpp
