<?xml version="1.0"?>
<package>
  <name>map4_point_type</name>
  <version>0.0.0</version>
  <description>The map4_point_type definitino package</description>
  <maintainer email="tomoya.sato@tier4.jp">Tomoya-Sato</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <export>
  </export>
</package>
