<?xml version="1.0"?>
<package format="2">
  <name>map4_point_type</name>
  <version>0.0.0</version>
  <description>The map4_point_type definitino package</description>
  <maintainer email="tomoya.sato@tier4.jp">Tomoya-Sato</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
